# earth-explorer

./: .gitignore  README.md  app.js  boot.js  index.html  main.js  package-lock.json  package.json  styles.css
backend/: main.py  pyproject.toml
backend/scripts/: arcgis_hub_index_search.py  extract_locations_gliner2.py  extract_locations_gpt_oss_lmstudio.py  extract_locations_nuextract2.py  process_pdf_docling.py
scripts/: setup.sh
