[project]
name = "earth-explorer-backend"
version = "0.1.0"
description = "FastAPI backend for Earth Explorer geocoding"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "httpx==0.28.1",
  "docling>=2.0.0",
  "gliner2>=0.2.1",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.uv]
package = false
